# rand

./: LICENSE  README.md  meson.build  meson.options
TestU01/: meson.build
TestU01/examples/: bat2.c  birth1.c  birth2.c  ex1.c  ex3.c  ex4.c  scat.c
TestU01/include/: unif01.h
TestU01/mylib/: addstr.c
TestU01/probdist/: meson.build
TestU01/testu01/: sstring.c
include/: numerical_recipes.hh  philox.h  philox.hh  randomgen.hh  threefry.hh
subprojects/: .gitignore  random123.wrap
subprojects/TestU01/: meson.build
subprojects/TestU01/examples/: bat1.c  bat3.c  ex7.c  fbirth.c  fcoll.c  mrg32k3a.c  my16807.c  my16807.h  scat2.c  xorshift.c
subprojects/TestU01/include/: Makefile  gdefconf.h  unif01.h
subprojects/TestU01/mylib/: meson.build  num2.c  tables.c  tcode.c
subprojects/TestU01/testu01/: bbattery.c  meson.build  smultin.c  sstring.c  ucrypto.c  ucryptoIS.c  ulcg.c  unif01.c
test/: crush.cc  smallcrush.cc  test_philox.cc
test/philox/: crush.cc  smallcrush.cc
